fixed spacing in Hero component

--- a/src/components/Hero/_hero.scss
+++ b/src/components/Hero/_hero.scss
@@ -7,7 +7,7 @@
 
     &__box {
         width: $container-width;
-        margin: 10rem auto 0;
+        margin: 0 auto;
     }
 
     &__header {
@@ -24,7 +24,7 @@
         border: 10px solid $color-gray;
         width: 70rem;
         display: block;
-        margin: 10rem auto;
+        margin: 3rem auto 10rem;
     }
 
     &__container {
